Sanitize incoming HTML to handle HTML entities and protect against XSS attacks

--- a/Frontend/trivializer/src/components/Questions.css
+++ b/Frontend/trivializer/src/components/Questions.css
@@ -1,9 +1,16 @@
 .question {
-  border: 2px solid red;
+  border: 2px solid black;
   border-radius: 2%;
+  margin: 2%;
 }
 
 .questions {
   list-style-type: none;
   text-align: left;
+}
+
+.main-content-round {
+  width: 100%;
+  display: flex;
+  flex-flow: column wrap;
 }
